# ironclad

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  FEATURE_PARITY.md  README.md
.cargo/: config.toml
.claude/commands/: add-sse-event.md  add-tool.md  ship.md  trace.md
channels-src/slack/: Cargo.toml  build.sh
channels-src/slack/src/: lib.rs
channels-src/telegram/: Cargo.toml  build.sh
channels-src/telegram/src/: lib.rs
channels-src/whatsapp/: Cargo.toml
channels-src/whatsapp/src/: lib.rs
dashboard/: .gitignore  Cargo.toml  README.md  Trunk.toml  audio-worklet.js  index.html  pip-animation.js  silero.js  tailwind.config.js
dashboard/src/: app.rs  main.rs
dashboard/src/jarvis/: api.rs  arc.rs  mod.rs  pip.rs  screen.rs  sse.rs  streaming.rs  voice.rs
dashboard/src/wizard/: api.rs  mod.rs
dashboard/style/: tailwind.css
docs/: BUILDING_CHANNELS.md
jarvis-desktop/: Cargo.toml  build.rs
jarvis-desktop/src/: agent_names.rs  audio.rs  crash_isolation.rs  gateway.rs  hotkeys.rs  icon.rs  main.rs  markdown.rs  notify.rs  screen.rs  settings.rs  speech_gate.rs  splitter.rs  streaming_stt.rs  vad.rs  voice_intent.rs  window.rs
jarvis-desktop/ui/: main.slint
scripts/: launch-chrome-cdp.ps1  seed_direct.sql  seed_workspace.ps1  seed_workspace.sql
src/: config.rs  error.rs  lib.rs  main.rs  settings.rs
src/agent/: agent_loop.rs  autonomous_loop.rs  mod.rs  scheduler.rs  self_repair.rs  session.rs  session_manager.rs  submission.rs  worker.rs
src/channels/: channel.rs  repl.rs
src/channels/wasm/: bundled.rs  loader.rs  mod.rs  router.rs  wrapper.rs
src/channels/web/: log_layer.rs  mcp.rs  mod.rs  server.rs  sse.rs  types.rs  ws.rs  wt_events.rs
src/channels/web/static/: app.js  index.html  style.css
src/cli/: config.rs  mcp.rs  memory.rs  mod.rs  status.rs  tool.rs
src/context/: state.rs
src/extensions/: discovery.rs  manager.rs  registry.rs
src/history/: analytics.rs  fjall_store.rs  mod.rs  store.rs
src/llm/: anthropic.rs  mod.rs  provider.rs  reasoning.rs
src/safety/: policy.rs
src/sandbox/: mod.rs
src/secrets/: fjall_store.rs  keychain.rs  mod.rs  store.rs  types.rs
src/setup/: channels.rs  mod.rs  onboard_api.rs  wizard.rs
src/tools/: registry.rs  tool.rs
src/tools/builder/: core.rs
src/tools/builtin/: claude_code_transcript.rs  extension_tools.rs  feedback_log.rs  file.rs  github.rs  http.rs  memory.rs  mission_lookup.rs  mod.rs  os_control.rs  recent_logs.rs  shell.rs  spawn_agent.rs  tools_inventory.rs  vault.rs  weather.rs  windows_desktop.rs  windows_input.rs  windows_screenshot.rs  windows_window.rs
src/tools/mcp/: auth.rs  client.rs  config.rs  mod.rs  namespace_router.rs  protocol.rs  session.rs  stdio_client.rs
src/tools/wasm/: capabilities_schema.rs  fjall_store.rs  loader.rs  mod.rs  storage.rs
src/voice/: mod.rs  stt.rs
src/workspace/: document.rs  fjall_store.rs  fts_index.rs  mod.rs  repository.rs  search.rs  vector_store.rs
tests/: wasm_channel_integration.rs  workspace_integration.rs  ws_gateway_integration.rs
tools-src/gmail/: Cargo.toml
tools-src/gmail/src/: lib.rs
tools-src/google-calendar/: Cargo.toml
tools-src/google-calendar/src/: lib.rs
tools-src/google-docs/: Cargo.toml
tools-src/google-docs/src/: lib.rs
tools-src/google-drive/: Cargo.toml
tools-src/google-drive/src/: api.rs  lib.rs
tools-src/google-sheets/: Cargo.toml
tools-src/google-sheets/src/: lib.rs
tools-src/google-slides/: Cargo.toml
tools-src/google-slides/src/: lib.rs
tools-src/slack/: Cargo.toml  README.md
tools-src/slack/src/: lib.rs
tools-src/telegram/: Cargo.toml
tools-src/telegram/src/: lib.rs
voice/: parakeet_server.py  parakeet_wt_server.py  wt_cert.pem  wt_cert.sha256  wt_key.pem  wt_probe.py
voice/ft_data/: jarvis.list  metadata.csv
workspace_seed/: AGENTS.md  AUTONOMOUS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  README.md  SOUL.md  USER.md
