# Workspace root. jarvis-desktop sits alongside this crate so both
# binaries land in the same target/release/ — jarvis_up's sibling-path
# discovery (`current_exe()/../jarvis-desktop.exe`) picks it up without
# extra configuration. The Leptos `dashboard/` is intentionally excluded
# because its build flow runs through Trunk, not cargo.
[workspace]
members = [".", "jarvis-desktop"]
exclude = ["dashboard"]

[package]
name = "ironclad"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Secure personal AI assistant that protects your data and expands its capabilities on the fly"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }

# WebTransport server — replaces the wedgy aioquic Python parakeet-wt sidecar.
# wtransport is built on quinn (production-grade QUIC), used by Cloudflare and
# others. Generated certs go through rcgen.
wtransport = "0.6"
rcgen = "0.14"
time = "0.3"  # for cert validity calculations
pem = "3"     # for parsing the cert back to DER to compute SHA-256

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# OS clipboard access (used by windows_clipboard_get/set).
arboard = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenvy = "0.15"

# Core types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde", "serde-with-str", "maths"] }
rust_decimal_macros = "1"

# Async traits
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Terminal
crossterm = "0.28"
rustyline = { version = "17", features = ["derive", "with-file-history"] }
termimad = "0.34"

# Channel integrations
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Safety/sanitization
regex = "1"
aho-corasick = "1"

# Filesystem paths
dirs = "6"

# Secrecy for sensitive values
secrecy = { version = "0.10", features = ["serde"] }

# URL encoding for OAuth flow
urlencoding = "2"

# Open URLs in browser
open = "5"

# WASM sandbox for untrusted tool execution
wasmtime = { version = "28", features = ["component-model"] }
wasmtime-wasi = "28"  # WASI support for component model
wasmparser = "0.220"  # WASM binary parsing for validation

# Cryptography for secrets management
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1"
rand = "0.8"

# Docker sandbox
bollard = "0.18"

# HTTP proxy for sandboxed network access
hyper = { version = "1.5", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"
base64 = "0.22.1"
# PNG encoding for windows_screenshot_foreground (lean feature set).
image = { version = "0.25", default-features = false, features = ["png"] }
embedvec = "0.8.0"
fjall = "2.11"
tantivy = "0.25.0"

# Voice gateway: scratch wav/txt files for whisper-cli + piper subprocesses.
tempfile = "3"

# OpenAPI schema generation + Swagger UI for the gateway and onboarding APIs.
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# macOS keychain
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

# Linux secret-service (GNOME Keyring, KWallet)
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }
zbus = "4"

# Windows Credential Manager via the keyring crate (uses wincred under the hood).
# Plus virtual desktop control (winvd) and HWND enumeration (windows crate)
# for the windows_desktop tool family.
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
# 0.0.49 ships GUID/vtable updates for Win11 24H2 build 26100.2605+;
# McKale's machine is on 26200 and the older 0.0.46 GUIDs segfault
# inside IServiceProvider on this build.
winvd = "0.0.49"
# Pinned to 0.52 to match winvd's HWND/COM types. Without this
# pin, cargo picks 0.59 transitively and HWND becomes a *mut c_void
# instead of an isize, breaking interop with winvd.
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    # PrintWindow lives under Storage::Xps in the windows crate — yes,
    # really. It's the only way to capture a single window's pixels
    # without relying on the screen DC, which is why
    # windows_screenshot_foreground needs this feature.
    "Win32_Storage_Xps",
] }
# Second copy of the windows crate at 0.58 so the winvd_helper bin can
# call winvd 0.0.49 (which uses windows 0.58's HWND/COM types). The rest
# of the project stays on 0.52 — migrating the entire Win32 surface to
# 0.58 would cascade through windows_input, windows_window, and
# windows_screenshot. The helper is the only consumer that talks to
# winvd directly, so the version skew is contained.
windows_58 = { package = "windows", version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
] }

[dev-dependencies]
tokio-test = "0.4"
tokio-tungstenite = "0.26"
pretty_assertions = "1"
tempfile = "3"

[features]
default = []
integration = []
